alignment issues of icon in partner and jira issues

--- a/src/app/dashboard/manage-team-member-group/manage-team-member-group.component.css
+++ b/src/app/dashboard/manage-team-member-group/manage-team-member-group.component.css
@@ -176,3 +176,8 @@
         height: 285px!important;
     }
 }
+.pd-align{
+    top: 0px !important;
+    padding-left: 16px;
+    padding-right: 13px;
+}
