--- a/src/app/dashboard/vendor-reports/vendor-reports.component.css
+++ b/src/app/dashboard/vendor-reports/vendor-reports.component.css
@@ -135,7 +135,7 @@ label {
 
 .vendor-badge {
     background-color: #00a6e8;
-    color: white;
+    color: white !important;
     padding: 4px;
     text-align: center;
     margin: 0 auto;
@@ -146,7 +146,7 @@ label {
 
 .partner-badge {
     background-color: #626262;
-    color: white;
+    color: white !important;
     padding: 4px;
     text-align: center;
     margin: 0 auto;
