--- a/src/app/partners/add-partners/add-partners.component.css
+++ b/src/app/partners/add-partners/add-partners.component.css
@@ -86,7 +86,7 @@
 
 .cct {
 	display: block;
-	margin-top: 22px !important;
+	margin-top: 0px !important;
 	text-align: center;
 	font-size: 24px;
 	margin: 0 auto 10px
